[metadata]
name = MLEBE
version = 0.0.1-dev
description = Machine Learning Enabled Brain Segmentation
author = Hendrik Klug
url = https://github.com/Jimmy2027/MLEBE
keywords =
    fMRI
    data analysis
    deep learning

provides = mlebe

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
install_requires =
    pandas
    opencv-python
    matplotlib
    numpy
    openpyxl
    scikit-image
    jsonschema
    torch>=1.1
    torchvision
    tqdm
    torchio
    sklearn
    xlrd


packages = find:


[options.extras_require]
test =
    pytest

training = h5py; visdom; dominate

samri = samri @ git+ssh://git@github.com/Jimmy2027/SAMRI