[metadata]
name = MLEBE
version = 0.0.1-dev
description = Machine Learning Enabled Brain Segmentation
author = Hendrik Klug
url = https://github.com/Jimmy2027/MLEBE
keywords =
    fMRI
    data analysis
    deep learning

provides = mlebe

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.8
install_requires =
    SimpleITK<2
    pandas
    opencv-python
    matplotlib
    numpy
    openpyxl
    scikit-image
    jsonschema
    torch
    torchvision
    tqdm
    torchio>0.18.25
    sklearn
    xlrd


packages = find:


[options.extras_require]
test =
    pytest

training = h5py; visdom; dominate

samri = samri @ git+ssh://git@github.com/Jimmy2027/SAMRI